--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
     "axios": "^0.20.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
