--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@jilow42/searchevent",
+  "name": "@so-xzen/my-react",
   "version": "1.0.0",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "plop": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "fix": "webpack-dev-server --mode development --open --fix"
   },
@@ -32,7 +31,6 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
     "axios": "^0.20.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
